# flask-wiki

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Pipfile  README.md  babel.cfg  pyproject.toml  pytest.ini  setup.py
.github/: auto_assign.yml
.github/workflows/: continuous-integration-test.yml  pypi-publish.yml
examples/: app.py
examples/data/: demo.md  home.md  home_fr.md  next.md
examples/data/home/: next.md
flask_wiki/: __init__.py  api.py  cli.py  config.py  forms.py  markdown_ext.py  utils.py  views.py
flask_wiki/static/css/: wiki.css
flask_wiki/static/js/: wiki.js
flask_wiki/templates/wiki/: 403.html  404.html  base.html  editor.html  files.html  navigation.html  page.html  search.html
flask_wiki/translations/: messages.pot
flask_wiki/translations/de/LC_MESSAGES/: messages.mo  messages.po
flask_wiki/translations/en/LC_MESSAGES/: messages.mo  messages.po
flask_wiki/translations/fr/LC_MESSAGES/: messages.mo  messages.po
flask_wiki/translations/hu/LC_MESSAGES/: messages.mo  messages.po
flask_wiki/translations/it/LC_MESSAGES/: messages.mo  messages.po
scripts/: test
tests/: conftest.py  test_api.py  test_utils.py  test_views.py
tests/data/: home.md  sample.md  sample_fr.md
